Added contact and location / address fields to customer entity
--HG--
extra : convert_revision : svn%3A237dfc2b-7c0e-0410-bfc4-b1bdb0875535/trunk%40224